Took pagination out of containerdisplay, fixed styling

--- a/src/Components/Cards/MiniCard.module.css
+++ b/src/Components/Cards/MiniCard.module.css
@@ -56,6 +56,8 @@
 .pagination {
     display: flex;
     justify-content: center;
+    background-color: #010622;
+    padding-top: 3rem;
     
 }
 
